--- a/src/app/modules/contests/components/contestant-view/contestant-view.component.html
+++ b/src/app/modules/contests/components/contestant-view/contestant-view.component.html
@@ -1,14 +1,3 @@
-@if (user?.username) {
-  <div>
-    <contests-rating-image
-      [title]="user.ratingTitle"
-      [class]="'mr-50 mb-50'"
-      [size]="imgSize">
-    </contests-rating-image>
-    <user-popover [textColor]="textColor" [username]="user.username"></user-popover>
-  </div>
-}
-
 @if (team) {
   <div class="team">
     <u class="text-{{ teamNameColor }} font-medium-1">{{ team.name }}:</u>
@@ -24,5 +13,14 @@
         </span>
       </div>
     }
+  </div>
+} @else if (user?.username) {
+  <div>
+    <contests-rating-image
+      [title]="user.ratingTitle"
+      [class]="'mr-50 mb-50'"
+      [size]="imgSize">
+    </contests-rating-image>
+    <user-popover [textColor]="textColor" [username]="user.username"></user-popover>
   </div>
 }
