--- a/src/app/modules/contests/components/contestant-view/contestant-view.component.html
+++ b/src/app/modules/contests/components/contestant-view/contestant-view.component.html
@@ -1,18 +1,27 @@
 @if (team) {
   <div class="team">
-    <u class="text-{{ teamNameColor }} font-medium-1">{{ team.name }}:</u>
-    @for (member of team.members; track member; let i = $index) {
-      <div class="ml-1">
-        <contests-rating-image
-          [size]="28"
-          [title]="member.ratingTitle"
-          [class]="'mr-50 mb-50'">
-        </contests-rating-image>
-        <span class="font-small-2 font-weight-bolder">
-          <user-popover [textColor]="textColor" [username]="member.username"></user-popover>
-        </span>
-      </div>
+    @if (isOfficial) {
+      <span [ngbTooltip]="'Official'">
+        <kep-icon name="check" color="success"></kep-icon>
+      </span>
     }
+    <u class="text-{{ teamNameColor }} font-medium-1">{{ team.name }}:</u>
+    <br>
+    (
+    @for (member of team.members; track member; let i = $index) {
+      <span class="ml-25">
+<!--        <contests-rating-image-->
+<!--          [size]="24"-->
+<!--          [title]="member.ratingTitle"-->
+<!--          [class]="'mr-50 mb-50'">-->
+<!--        </contests-rating-image>-->
+        <span class="font-small-2 font-weight-bolder">
+          <user-popover [customContent]="true" [textColor]="textColor" [username]="member.username">
+            {{member.username}}<span *ngIf="!$last">, </span>
+          </user-popover>
+        </span>
+      </span>
+    } )
   </div>
 } @else if (user?.username) {
   <div>
