[REFACTORING] kep-table

--- a/src/app/shared/components/kep-table/kep-table.component.html
+++ b/src/app/shared/components/kep-table/kep-table.component.html
@@ -15,7 +15,7 @@
           <ng-content select="[body]"></ng-content>
         </tbody>
         <tfoot>
-          <ng-content select="[header]"></ng-content>
+          <ng-content select="[footer]"></ng-content>
         </tfoot>
       </table>
     </div>
