--- a/src/app/modules/problems/pages/attempts/attempts.component.html
+++ b/src/app/modules/problems/pages/attempts/attempts.component.html
@@ -1,38 +1,37 @@
-<div class="content-wrapper container-xxl">
+<div class="content-wrapper">
   <div class="content-body">
     <app-content-header (refresh)="reloadPage()" [contentHeader]="contentHeader"></app-content-header>
-
-    <div class="mt-2 form-group">
-      @if (currentUser) {
-        <div class="custom-control custom-checkbox">
-          <input
-            [disabled]="isLoading"
-            type="checkbox"
-            class="custom-control-input"
-            [(ngModel)]="myAttempts"
-            (change)="reloadPage()"
-            [ngModelOptions]="{standalone: true}"
-            id="myAttempts" />
-            <label class="custom-control-label" for="myAttempts">{{ 'MY_ATTEMPTS' | translate }}</label>
-          </div>
-        }
-      </div>
-
-      @if (!attempts && isLoading){
-        <div class="card" [style.height.px]='300'>
-          <spinner></spinner>
-        </div>
-      } @else {
-        <attempts-table [hackEnabled]="true" [attempts]="attempts"></attempts-table>
-      }
-
-
-      <kep-pagination
-        [collectionSize]="total"
-        [(page)]="pageNumber"
-        [pageSize]="20"
-        [maxSize]="maxSize"
-        (pageChange)="reloadPage()">
-      </kep-pagination>
-    </div>
   </div>
+</div>
+
+<div class="mt-2 form-group">
+  @if (currentUser) {
+    <div class="custom-control custom-checkbox">
+      <input
+        [disabled]="isLoading"
+        type="checkbox"
+        class="custom-control-input"
+        [(ngModel)]="myAttempts"
+        (change)="reloadPage()"
+        [ngModelOptions]="{standalone: true}"
+        id="myAttempts"/>
+      <label class="custom-control-label" for="myAttempts">{{ 'MY_ATTEMPTS' | translate }}</label>
+    </div>
+  }
+</div>
+
+@if (!attempts && isLoading) {
+  <div class="card" [style.height.px]='300'>
+    <spinner></spinner>
+  </div>
+} @else {
+  <attempts-table [hackEnabled]="true" [attempts]="attempts"></attempts-table>
+}
+
+<kep-pagination
+  (pageChange)="reloadPage()"
+  [(page)]="pageNumber"
+  [collectionSize]="total"
+  [maxSize]="maxSize"
+  [pageSize]="20">
+</kep-pagination>
