[REFACTORING] collapsible-item

--- a/src/@core/scss/base/core/menu/menu-types/horizontal-menu.scss
+++ b/src/@core/scss/base/core/menu/menu-types/horizontal-menu.scss
@@ -225,6 +225,11 @@
           display: flex;
           margin-right: 0.715rem;
           font-weight: 500;
+          color: #6e6b7b;
+
+          @include dark-layout {
+            color: white;
+          }
         }
         &:hover {
           > div {
