--- a/src/app/styles/colors/languages.scss
+++ b/src/app/styles/colors/languages.scss
@@ -27,7 +27,7 @@
 @include define-badge-lang(
   $name: 'py',
   $background: linear-gradient(271deg, #8CC63F, #007CBA),
-  $box-shadow: 0px 0px 10px #3776AB,
+  $box-shadow: 0 0 5px #3776AB,
   $background-dark: linear-gradient(271deg, #619120, #005a84),
   $box-shadow-dark: 0px 0px 5px #248a63,
 );
@@ -35,7 +35,7 @@
 @include define-badge-lang(
   $name: 'cpp',
   $background: linear-gradient(45deg, #6295cb, #00427e),
-  $box-shadow: 0px 0px 10px #74b1f1,
+  $box-shadow: 0 0 5px #74b1f1,
   $background-dark: linear-gradient(45deg, #003666, #4878ab),
   $box-shadow-dark: 0px 0px 5px #4878ab,
 );
@@ -43,7 +43,7 @@
 @include define-badge-lang(
   $name: 'r',
   $background: linear-gradient(45deg, #2466b8, #b4b5ba),
-  $box-shadow: 0px 0px 10px #afb0b5,
+  $box-shadow: 0 0 5px #afb0b5,
   $background-dark: linear-gradient(45deg, #154e94, #848692),
   $box-shadow-dark: 0px 0px 5px #9498ac
 );
@@ -51,7 +51,7 @@
 @include define-badge-lang(
   $name: 'hs',
   $background: linear-gradient(45deg, #5d5086, #453a62),
-  $box-shadow: 0px 0px 10px #8f4d8b,
+  $box-shadow: 0 0 5px #8f4d8b,
   $background-dark: linear-gradient(45deg, #372d51, #483d6b),
   $box-shadow-dark: 0px 0px 5px #8f4d8b,
 );
@@ -59,7 +59,7 @@
 @include define-badge-lang(
   $name: 'kt',
   $background: linear-gradient(45deg, #d7299c, #8051ff),
-  $box-shadow: 0px 0px 10px #8c45fa,
+  $box-shadow: 0 0 5px #8c45fa,
   $background-dark: linear-gradient(45deg, #a11371, #5521e1),
   $box-shadow-dark: 0 0 5px #8c45fa,
 );
@@ -67,7 +67,7 @@
 @include define-badge-lang(
   $name: 'c',
   $background: linear-gradient(45deg, #283593, #5c6bc0),
-  $box-shadow: 0px 0px 10px #5771b4,
+  $box-shadow: 0 0 5px #5771b4,
   $background-dark: linear-gradient(45deg, #162174, #3444a1),
   $box-shadow-dark: 0 0 5px #3444a1,
 );
@@ -75,7 +75,7 @@
 @include define-badge-lang(
   $name: 'html',
   $background: linear-gradient(141deg, #ff5959d6, #e04f5f),
-  $box-shadow: 0 0 10px #ff5959d6,
+  $box-shadow: 0 0 5px #ff5959d6,
   $background-dark: linear-gradient(141deg, #d04554, rgba(222, 73, 73, 0.84)),
   $box-shadow-dark: 0 0 5px #ff5959d6,
 );
@@ -83,7 +83,7 @@
 @include define-badge-lang(
   $name: 'sql',
   $background: linear-gradient(-45deg, rgba(234, 134, 71, 0.849), 50%, #ffad3bec),
-  $box-shadow: 0px 0px 10px #e39425,
+  $box-shadow: 0 0 5px #e39425,
   $background-dark: linear-gradient(-45deg, rgba(202, 112, 55, 0.85), 50%, rgba(230, 155, 49, 0.93)),
   $box-shadow-dark: 0px 0px 5px #e39425,
 );
@@ -91,7 +91,7 @@
 @include define-badge-lang(
   $name: 'bash',
   $background: linear-gradient(45deg, #3c4548, #7b8e94),
-  $box-shadow: 0px 0px 10px #3c4548,
+  $box-shadow: 0 0 5px #3c4548,
   $background-dark: linear-gradient(45deg, #323b3e, #65777d),
   $box-shadow-dark: 0px 0px 5px #3c4548,
 );
@@ -99,7 +99,7 @@
 @include define-badge-lang(
   $name: 'cs',
   $background: linear-gradient(45deg, #68217a, #953dac),
-  $box-shadow: 0px 0px 10px #953dac,
+  $box-shadow: 0 0 5px #953dac,
   $background-dark: linear-gradient(45deg, #4f135d, #7a2c8e),
   $box-shadow-dark: 0px 0px 5px #7a2c8e,
 );
@@ -108,14 +108,14 @@
   $name: 'js',
   $background: linear-gradient(45deg, #e8d44d, #f7d724),
   $background-dark: linear-gradient(45deg, #b4a53c, #e8d44d),
-  $box-shadow: 0px 0px 10px #e8d44d,
+  $box-shadow: 0 0 5px #e8d44d,
   $box-shadow-dark: 0px 0px 5px #e8d44d
 );
 
 @include define-badge-lang(
   $name: 'php',
   $background: linear-gradient(45deg, #7377ad, #7377ad),
-  $box-shadow: 0px 0px 10px #7377ad,
+  $box-shadow: 0 0 5px #7377ad,
   $background-dark: linear-gradient(45deg, #515482, #696da0),
   $box-shadow-dark: 0px 0px 5px #696da0,
 );
@@ -123,7 +123,7 @@
 @include define-badge-lang(
   $name: 'java',
   $background: linear-gradient(45deg, #5283a2, 65%, #f89917),
-  $box-shadow: 0px 0px 10px #5283a2,
+  $box-shadow: 0 0 5px #5283a2,
   $background-dark: linear-gradient(45deg, #3c6884, 65%, #e88c0e),
   $box-shadow-dark: 0px 0px 5px #5283a2
 );
@@ -134,14 +134,14 @@
   $background: linear-gradient(45deg, #d1d5d8, #fafbfc),
   $box-shadow: 0px 0px 5px #4c4d4d,
   $background-dark: linear-gradient(45deg, #7a7d7f, #a1a3a5),
-  $box-shadow-dark: 0px 0px 10px #4c4d4d
+  $box-shadow-dark: 0 0 5px #4c4d4d
 );
 
 @include define-badge-lang(
   $name: 'rs',
   $color: #000,
   $background: linear-gradient(45deg, #9e9e9e, #767676),
-  $box-shadow: 0px 0px 10px #4c4d4d,
+  $box-shadow: 0 0 5px #4c4d4d,
   $background-dark: linear-gradient(45deg, #565656, #666666),
   $box-shadow-dark: 0px 0px 5px #767676,
 );
