[ADD] new to upcoming contests | contest-card

--- a/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
@@ -1,4 +1,6 @@
 <div
+  new-feature
+  [show]="contest.status == -1"
   [@fadeInOnEnter]
   class="card contests-colors contest-{{ contest.id }} {{ contest.title }} contest-type-{{ contest.type }}">
   <a [routerLink]="routerLink">
